--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -9,17 +9,19 @@
 
 
 <ion-content padding>
+  Facebook login:
 
-  <h3>Welcome to your first Ionic app!</h3>
-
-  <p>
-    This starter project is our way of helping you get a functional app running in record time.
-  </p>
-  <p>
-    Follow along on the tutorial section of the Ionic docs!
-  </p>
-  <p>
+  <button ion-button full color="primary"(click)="loginWithFB()">Login with facebook</button>
     <button ion-button color="primary" menuToggle>Toggle Menu</button>
-  </p>
+  
+    <ion-card *ngIf="userData">
+
+      <ion-card-header>
+      Welcome  {{userData.name}}
+      </ion-card-header>
+      <p>
+        <img src="{{userData.picture_large.data.url}}" width="100" alt="{{userData.name}}" />
+      </p>
+    </ion-card>
 
 </ion-content>
